--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                 <h1 class="heading">
                                     <div class="containeri ">
                                         <img class="img img-responsive text-center col-xs-12 col-md-12 col-sm-12 col-lg-12" src="img/HPBDAY.jpg">
-                                        <div class=" text-danger polaroid bg-danger">Chúc mừng sinh nhật Trang, chúc Trang luôn vui vẻ, hạnh phúc và yêu đời. Hay luôn xinh đẹp và dịu dàng như Mùa Thu Hà Nội nhé!</div>
+                                        <div class=" text-danger polaroid bg-danger">Chúc mừng sinh nhật Trang, chúc Trang luôn vui vẻ, hạnh phúc và yêu đời. Hãy luôn xinh đẹp và dịu dàng như Mùa Thu Hà Nội nhé!</div>
                                     </div>
                                 </h1>
                                 <div class="containeri">
