--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                                 <div class="row">
                                     <div class="form-group">
-                                        <h4 class="modal-title text-success bg-success col-xs-12" id="myModalLabel">Trường Chun -
+                                        <h4 class="modal-title text-success bg-success col-xs-12" id="myModalLabel">TrgChun -
                                             <button id="play" class="btn btn-danger btn-lg" ng-click="audio.paused ? audio.play() : audio.pause()">
                                                 <i class="fa fa-play" aria-hidden="true"></i>
                                                 Bài hát: Mèo méo meo mèo meo</button>
